--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,20 @@
     display: flex;
 }
 /* section */
+.title{
+    padding-top: 54px;
+    color: #5863F8;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+}
+.text{
+    line-height: 1.6;
+    width: 378px;
+    color: #000000 ;
+    font-size: 42px;
+    margin-bottom: 46px;
+    font-family: 'Poppins', sans-serif;
+}
 .container{
     max-width: 1088px;
     width: 100%;
@@ -55,4 +69,25 @@
 }
 .outline:focus {
     outline: none;
+}
+/* section2 */
+.photo-title{
+    padding-top: 54px;
+    color: #5863F8;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+}
+.photo-text{
+    line-height: 1.6;
+    width: 565px;
+    color: #000000 ;
+    font-size: 42px;
+    margin-bottom: 46px;
+    font-family: 'Poppins', sans-serif;
+}
+.image-block{
+    max-width: 1261px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
