--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
     padding-top: 54px;
     color: #5863F8;
     font-size: 14px;
-    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-family: 'Poppins' , sans-serif;
 }
 .text{
     line-height: 1.6;
@@ -15,6 +16,7 @@
     color: #000000 ;
     font-size: 42px;
     margin-bottom: 46px;
+    font-weight: 800;
     font-family: 'Poppins', sans-serif;
 }
 .container,
@@ -91,7 +93,7 @@
     flex-direction: column;
     align-items: center;
 }
-ul>:first-child{
+.ul-child{
     margin-bottom: 5px;
 }
 .ul-box{
@@ -184,9 +186,43 @@ ul>:first-child{
     background-color: #DC4E41;
 }
 .footer-block{
-    margin-top: 50px;
+    margin-top: 90px;
     margin-bottom: 114px;
 }
 .footer-title{
+    font-size: 18px;
+    color: #FFF;
     margin-bottom: 20px;
+    font-family: 'Poppins';
+    font-weight: 600;
+}
+.logo-title{
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #FFF;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+}
+.footer-li{
+    font-family: 'Poppins';
+    color: #5863F8;
+    font-size: 14px;
+}
+.space{
+    margin-bottom: 10px;
+}
+.footer-text{
+    line-height: 1.6;
+    color: #B1B1B1;
+    font-size: 14px;
+    font-family: 'Poppins';
+}
+.footer-icon{
+    color: #5863F8;
+    margin-right: 14px;
+}
+.footer-span{
+    font-size: 14px;
+    color: #FFF;
+    font-family: 'Poppins';
 }
