--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 .flex{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 /* section */
@@ -26,8 +28,12 @@
     margin: 0 auto;
 }
 .form-wrapper{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .left-block{
     max-width: 720px;
@@ -55,6 +61,26 @@
     border-width: 2px;
     border-style: solid;
 }
+.textarea::-webkit-input-placeholder, .fname::-webkit-input-placeholder, .subject::-webkit-input-placeholder, .email::-webkit-input-placeholder
+{
+    color: #CECECE;
+    font-size: 13px;
+}
+.textarea::-moz-placeholder, .fname::-moz-placeholder, .subject::-moz-placeholder, .email::-moz-placeholder
+{
+    color: #CECECE;
+    font-size: 13px;
+}
+.textarea:-ms-input-placeholder, .fname:-ms-input-placeholder, .subject:-ms-input-placeholder, .email:-ms-input-placeholder
+{
+    color: #CECECE;
+    font-size: 13px;
+}
+.textarea::-ms-input-placeholder, .fname::-ms-input-placeholder, .subject::-ms-input-placeholder, .email::-ms-input-placeholder
+{
+    color: #CECECE;
+    font-size: 13px;
+}
 .textarea::placeholder,
 .fname::placeholder,
 .subject::placeholder,
@@ -76,22 +102,35 @@
 }
 .icon-wrapper{
     margin-top: 50px;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .block{
     width: 59px;
     height: 58px;
     background-color: #5863F8 ;
     border-radius: 50px;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .box-wrapper{
     max-width: 362px;
     width: 100%;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .ul-child{
     margin-bottom: 5px;
@@ -140,8 +179,12 @@
 }
 .image-block{
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .img{
     width: 352px;
@@ -157,6 +200,8 @@
     background-color: #121212;
     margin-top: 5px;
     color: white;
+    width: 100%;
+    z-index: 10;
 }
 .footer-container{
     max-width: 1366px;
@@ -164,7 +209,9 @@
     margin:0 auto;
 }
 .footer-wraper{
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .footer-block:nth-child(1) {
     max-width: 260px;
@@ -175,8 +222,12 @@
     height: 35px;
     border-radius: 50px;
     margin-right: 11px;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .icon-box{
     margin-top: 20px;
